# jfs-fse-2019-artifact

./: README.md
data/experiments/: 0-run_experiments.sh  1-mars_extract_sat.sh  2-check_event_count.sh  3-extract_dsoes_wallclock_time.sh  4-annotate-with-tag.sh  5-annotate-with-fuzzing-throughput.sh  6-merge_results.sh  7-synthesize-portfolio.sh  README.md  common.sh  event_count.sh  jfs_perf_describe.sh  jfs_perf_plot_quantile.sh  solver_cmp_describe.sh  (+2 more)
smt-runner/: LICENSE.txt  README.md  requirements.txt
solvers/: README.md
solvers/jfs/src/lib/: CMakeLists.txt
solvers/jfs/src/lib/CXXFuzzingBackend/: CMakeLists.txt  CXXFuzzingSolver.cpp  CXXFuzzingSolverOptions.cpp  CXXProgram.cpp  CXXProgramBuilderOptions.cpp  CXXProgramBuilderPass.cpp  CXXProgramBuilderPassImpl.cpp  CXXProgramBuilderPassImpl.h  ClangInvocationManager.cpp  ClangOptions.cpp  JFSCXXProgramStat.cpp
solvers/jfs/src/lib/CXXFuzzingBackend/CmdLine/: CXXProgramBuilderOptionsBuilder.cpp  ClangOptionsBuilder.cpp  CommandLineCategory.cpp
solvers/jfs/src/lib/Core/: CMakeLists.txt  JFSContext.cpp  Model.cpp  ModelValidator.cpp  Query.cpp  RNG.cpp  SMTLIB2Parser.cpp  SimpleModel.cpp  Solver.cpp  ToolErrorHandler.cpp  Z3ASTVisitor.cpp  Z3Node.cpp  Z3NodeUtil.cpp
solvers/jfs/src/lib/FuzzingCommon/: BufferAssignment.cpp  BufferElement.cpp  CMakeLists.txt  CommandLineCategory.cpp  DummyFuzzingSolver.cpp  EqualityExtractionPass.cpp  FileSerializableModel.cpp  FreeVariableToBufferAssignmentPass.cpp  FreeVariableToBufferAssignmentPassOptions.cpp  FuzzingAnalysisInfo.cpp  FuzzingSolver.cpp  FuzzingSolverOptions.cpp  JFSRuntimeFuzzingStat.cpp  LibFuzzerInvocationManager.cpp  LibFuzzerOptions.cpp  SMTLIBRuntimes.cpp.in  SMTLIBRuntimes.h.in  SeedGenerator.cpp  SeedManager.cpp  SeedManagerStat.cpp  SortConformanceCheckPass.cpp  SpecialConstantSeedGenerator.cpp  SpecialConstantSeedGeneratorStat.cpp  WorkingDirectoryManager.cpp
solvers/jfs/src/lib/FuzzingCommon/CmdLine/: CMakeLists.txt  FreeVariableToBufferAssignmentPassOptionsBuilder.cpp  LibFuzzerOptionsBuilder.cpp  SeedManagerOptionsBuilder.cpp
solvers/jfs/src/lib/Support/: CMakeLists.txt  CancellableProcess.cpp  ErrorMessages.cpp  FileUtils.cpp  ICancellable.cpp  JFSStat.cpp  ScopedTimer.cpp  StatisticsManager.cpp  Timer.cpp  version.cpp
solvers/jfs/src/lib/Transform/: AndHoistingPass.cpp  BitBlastPass.cpp  BvBoundPropagationPass.cpp  CMakeLists.txt  ConstantPropagationPass.cpp  DIMACSOutputPass.cpp  DuplicateConstraintEliminationPass.cpp  FpToBvPass.cpp  QueryPassManager.cpp  SimpleContradictionsToFalsePass.cpp  SimplificationPass.cpp  StandardPasses.cpp  TrueConstraintEliminationPass.cpp  Z3QueryPass.cpp
solvers/jfs/src/lib/Z3Backend/: CMakeLists.txt  Z3Solver.cpp
solvers/jfs/src/runtime/SMTLIB/SMTLIB/unittests/Core/: CMakeLists.txt  MakeFromBuffer.cpp
solvers/jfs/src/tools/: CMakeLists.txt
solvers/jfs/src/tools/jfs/: CMakeLists.txt  main.cpp
solvers/jfs/src/tools/jfs-opt/: CMakeLists.txt  main.cpp
solvers/jfs/src/tools/jfs-smt2cnf/: CMakeLists.txt  main.cpp
solvers/jfs/src/tools/jfs-smt2cxx/: CMakeLists.txt  main.cpp
solvers/jfs/src/tools/yaml-syntax-check/: CMakeLists.txt  main.cpp
(+1081 files in other folders)
